--- a/Practica1/aereopuerto.ui
+++ b/Practica1/aereopuerto.ui
@@ -55,6 +55,9 @@
     <property name="text">
      <string/>
     </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
