--- a/Practica1/aereopuerto.ui
+++ b/Practica1/aereopuerto.ui
@@ -213,6 +213,22 @@
      </property>
     </widget>
    </widget>
+   <widget class="QLabel" name="lblEstaciones">
+    <property name="geometry">
+     <rect>
+      <x>900</x>
+      <y>170</y>
+      <width>791</width>
+      <height>171</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
