--- a/Practica1/aereopuerto.ui
+++ b/Practica1/aereopuerto.ui
@@ -219,9 +219,9 @@
    <widget class="QLabel" name="lblEstaciones">
     <property name="geometry">
      <rect>
-      <x>900</x>
+      <x>890</x>
       <y>170</y>
-      <width>811</width>
+      <width>821</width>
       <height>161</height>
      </rect>
     </property>
@@ -236,9 +236,25 @@
     <property name="geometry">
      <rect>
       <x>1560</x>
-      <y>350</y>
+      <y>340</y>
       <width>131</width>
-      <height>551</height>
+      <height>561</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblMaletas">
+    <property name="geometry">
+     <rect>
+      <x>890</x>
+      <y>340</y>
+      <width>641</width>
+      <height>361</height>
      </rect>
     </property>
     <property name="text">
